--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-dom": "^15.2.0",
     "react-router": "^2.5.2",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.1",
     "superagent": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
