--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --progress --profile --colors --config webpack.production.config.js",
     "bundle": "babel-node tools/run bundle",
-    "dev": "webpack-dev-server --progress --profile --colors --hot",
+    "dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,6 +16,7 @@
   "author": "zhangchaowei",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -25,16 +26,13 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "image-webpack-loader": "^1.8.0",
     "jquery": "^3.0.0",
-    "npm": "^3.10.3",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
     "react": "^15.2.0",
-    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.2.0",
     "react-router": "^2.5.2",
     "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.1.1",
     "superagent": "^2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
