--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "awsomeProject",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --progress --profile --colors",
+    "build": "NODE_ENV=production webpack -p --progress --profile --colors --display-chunks --display-modules --config webpack.production.config.js",
     "bundle": "babel-node tools/run bundle",
     "dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
