--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production webpack -p --progress --profile --colors --display-chunks --display-modules --config webpack.production.config.js",
     "bundle": "babel-node tools/run bundle",
-    "dev": "webpack-dev-server",
+    "dev": "NODE_ENV=development webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,12 +21,10 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "jquery": "^3.0.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "react": "^15.2.0",
@@ -34,7 +32,6 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "redux": "^3.5.2",
-    "resolve-url-loader": "^1.6.0",
     "style-loader": "^0.13.1",
     "superagent": "^2.0.0",
     "url-loader": "^0.5.7",
